# Lumen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/lumen-bluetooth/: CHANGELOG.md  Cargo.toml  README.md
crates/lumen-bluetooth/src/: discovery.rs  lib.rs  monitoring.rs  service.rs
crates/lumen-bluetooth/src/agent/: event_processor.rs
crates/lumen-bluetooth/src/core/adapter/: mod.rs  monitoring.rs
crates/lumen-bluetooth/src/core/device/: mod.rs  monitoring.rs
crates/lumen-config/: Cargo.toml
crates/lumen-config/src/: docs.rs  lib.rs
crates/lumen-config/src/infrastructure/: error.rs  paths.rs  schema.rs  secrets.rs  watcher.rs
crates/lumen-config/src/infrastructure/loading/: file_creation.rs
crates/lumen-config/src/infrastructure/themes/: palettes.rs
crates/lumen-config/src/property/: config.rs
crates/lumen-config/src/schemas/bar/: mod.rs
crates/lumen-config/src/schemas/general/: mod.rs  types.rs
crates/lumen-config/src/schemas/modules/: mod.rs  types.rs
crates/lumen-config/src/schemas/osd/: mod.rs  types.rs
crates/lumen-config/src/schemas/styling/: mod.rs  palette.rs
crates/lumen-config/src/schemas/wallpaper/: mod.rs  types.rs
crates/lumen-config/tests/: deprecated_alias.rs
crates/lumen-hermes/: Cargo.toml
crates/lumen-hermes/src/: client.rs  dashboard.rs  error.rs  lib.rs  markdown.rs  model.rs  service.rs  sse.rs  store.rs
crates/lumen-ipc/: Cargo.toml
crates/lumen-ipc/src/: idle_inhibit.rs  lib.rs  shell.rs  shell_ipc.rs
crates/lumen-mango/: CHANGELOG.md  Cargo.toml  README.md
crates/lumen-mango/src/: lib.rs  service.rs
crates/lumen-mango/src/monitoring/: mod.rs
crates/lumen-media/: CHANGELOG.md  Cargo.toml  README.md  dbus.md
crates/lumen-media/src/: builder.rs  lib.rs  monitoring.rs  service.rs
crates/lumen-media/src/core/metadata/: mod.rs  monitoring.rs
crates/lumen-media/src/core/player/: mod.rs  monitoring.rs
crates/lumen-media/src/dbus/: client.rs  mod.rs  server.rs
crates/lumen-model-usage/: Cargo.toml  README.md
crates/lumen-model-usage/src/: builder.rs  credentials.rs  error.rs  lib.rs  model.rs  polling.rs  service.rs
crates/lumen-model-usage/src/provider/: mod.rs
crates/lumen-model-usage/src/provider/claude/: mod.rs  parse.rs  types.rs
crates/lumen-model-usage/src/provider/codex/: mod.rs  parse.rs  types.rs
crates/lumen-power-profiles/: CHANGELOG.md  Cargo.toml  README.md  dbus.md
crates/lumen-power-profiles/src/: builder.rs  lib.rs
crates/lumen-power-profiles/src/core/: mod.rs  monitoring.rs
crates/lumen-power-profiles/src/dbus/: client.rs  mod.rs  server.rs
crates/lumen-settings/: Cargo.toml
crates/lumen-settings/src/: main.rs  property_handle.rs
crates/lumen-settings/src/app/: css.rs  helpers.rs  mod.rs  reset.rs  sourceview_scheme.rs  window.rs
crates/lumen-settings/src/app/watchers/: palette.rs  scss_dev.rs  theme.rs
crates/lumen-settings/src/editors/: mod.rs
crates/lumen-settings/src/editors/bar_layout/: methods.rs  mod.rs  module_picker.rs  row.rs
crates/lumen-settings/src/editors/color/: mod.rs  row.rs
crates/lumen-settings/src/editors/color_value/: helpers.rs  methods.rs  mod.rs  row.rs  tokens.rs
crates/lumen-settings/src/editors/enum_select/: mod.rs  row.rs
crates/lumen-settings/src/editors/file_picker/: mod.rs  row.rs
crates/lumen-settings/src/editors/font/: mod.rs  picker.rs  row.rs
crates/lumen-settings/src/editors/monitor_wallpaper/: methods.rs  mod.rs  row.rs
crates/lumen-settings/src/editors/number/: mod.rs  row.rs
crates/lumen-settings/src/editors/slider/: mod.rs  row.rs
crates/lumen-settings/src/editors/text/: helpers.rs  mod.rs  row.rs
crates/lumen-settings/src/editors/theme_selector/: helpers.rs  mod.rs  row.rs
crates/lumen-settings/src/editors/toggle/: mod.rs  row.rs
crates/lumen-settings/src/editors/toml_editor/: mod.rs  row.rs
crates/lumen-settings/src/pages/: layout.rs  mod.rs  nav.rs  page.rs  spec.rs
crates/lumen-settings/src/pages/about/: mod.rs
crates/lumen-settings/src/pages/bar/: button.rs  dropdown.rs  general.rs  mod.rs
crates/lumen-settings/src/pages/general/: mod.rs
crates/lumen-settings/src/pages/modules/: battery.rs  bluetooth.rs  brightness.rs  cava.rs  clock.rs  cpu.rs  custom.rs  dashboard.rs  hermes_chat.rs  hyprland_workspaces.rs  hyprsunset.rs  idle_inhibit.rs  (+21 more)
crates/lumen-settings/src/row/: methods.rs  mod.rs
crates/lumen-settings/src/sidebar/: helpers.rs  mod.rs
crates/lumen-shell/: Cargo.toml  build.rs
crates/lumen-shell/locales/en-US/: _bar.ftl  _osd.ftl
crates/lumen-shell/locales/fr/: _bar.ftl  _osd.ftl
crates/lumen-shell/src/: i18n.rs  lib.rs  startup.rs  tracing_init.rs  wallpaper_map.rs
crates/lumen-shell/src/bootstrap/: hermes_chat.rs  mod.rs  model_usage.rs  wallpaper.rs  weather.rs
crates/lumen-shell/src/shell/: services.rs
crates/lumen-shell/src/watchers/: color_extractor.rs  css.rs  location.rs  mod.rs  notification.rs  osd.rs  scss_dev.rs  sysinfo.rs  wallpaper.rs  weather.rs
crates/lumen-styling/: Cargo.toml
crates/lumen-styling/scss/base/: _index.scss
crates/lumen-styling/scss/tokens/: _index.scss
crates/lumen-styling/src/: errors.rs  lib.rs  watcher.rs
crates/lumen-styling/src/palette_provider/: matugen.rs  pywal.rs  wallust.rs
crates/lumen-widgets/: Cargo.toml
crates/lumen-widgets/src/: lib.rs  styling.rs  watchers.rs
lumen/: Cargo.toml
lumen/src/: lib.rs  main.rs
lumen/src/cli/: app.rs  dbus.rs
lumen/src/cli/audio/: input_volume.rs  output_volume.rs  proxy.rs
lumen/src/cli/config/: default.rs  schema.rs
lumen/src/cli/icons/: commands.rs  export.rs  import.rs  install.rs  list.rs  open.rs  remove.rs  setup.rs  sources.rs  sync.rs
lumen/src/cli/idle/: proxy.rs
lumen/src/cli/media/: proxy.rs  resolve.rs
lumen/src/cli/notify/: proxy.rs
lumen/src/cli/panel/: inspect.rs  proxy.rs  restart.rs  settings.rs  start.rs  status.rs  stop.rs
lumen/src/cli/power/: proxy.rs
lumen/src/cli/systray/: proxy.rs
lumen/src/cli/wallpaper/: proxy.rs
lumen/src/core/: init.rs  tracing.rs
lumen/src/docs/: index_page.rs  mod.rs  registry.rs
(+801 files in other folders)
