[workspace]
resolver = "2"
members = [
	"crates/lumen-audio",
	"crates/lumen-battery",
	"crates/lumen-bluetooth",
	"crates/lumen-brightness",
	"crates/lumen-cava",
	"crates/lumen-config",
	"crates/lumen-core",
	"crates/lumen-derive",
	"crates/lumen-hyprland",
	"crates/lumen-i18n",
	"crates/lumen-icons",
	"crates/lumen-idle-inhibit",
	"crates/lumen-ipc",
	"crates/lumen-mango",
	"crates/lumen-media",
	"crates/lumen-model-usage",
	"crates/lumen-network",
	"crates/lumen-niri",
	"crates/lumen-notification",
	"crates/lumen-power-profiles",
	"crates/lumen-settings",
	"crates/lumen-shell",
	"crates/lumen-styling",
	"crates/lumen-sysinfo",
	"crates/lumen-systray",
	"crates/lumen-traits",
	"crates/lumen-wallpaper",
	"crates/lumen-weather",
	"crates/lumen-widgets",
	"lumen",
]
exclude = ["sandbox"]

[workspace.package]
version = "0.7.2"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/lumen-rs/lumen"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22"
bitflags = "2.9.4"
bytesize = "2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["color", "derive"] }
console = "0.16"
derive_more = { version = "2.0.1", default-features = false, features = [
	"debug",
] }
dotenvy = "0.15"
fnv = "1.0"
futures = "0.3.31"
gdk-pixbuf = "0.22"
gdk4 = "0.11"
glib = "0.22"
glob = "0.3.2"
grass = "0.13.4"
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
i18n-embed = { version = "0.16", features = [
	"desktop-requester",
	"fluent-system",
] }
i18n-embed-fl = "0.10"
indicatif = "0.18"
inventory = "0.3"
libc = "0.2.176"
libpulse-binding = { version = "2.30.1", features = ["pa_v13"] }
minijinja = { version = "2.15", default-features = false, features = [
	"builtins",
	"serde",
] }
niri-ipc = "=25.11.0"
notify = "8"
palette = "0.7"
png = "0.18"
rand = "0.9.2"
relm4 = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.13", default-features = false, features = [
	"charset",
	"json",
	"query",
	"rustls",
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-embed = "8"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_json_path = "0.7"
smithay-client-toolkit = "0.20"
sourceview5 = "0.11"
sysinfo = { version = "0.33", default-features = false, features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
toml = { version = "1.1", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
unic-langid = "0.9"
wildcard = "0.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

lumen-audio = { path = "crates/lumen-audio" }
lumen-battery = { path = "crates/lumen-battery" }
lumen-bluetooth = { path = "crates/lumen-bluetooth" }
lumen-brightness = { path = "crates/lumen-brightness" }
lumen-cava = { path = "crates/lumen-cava", features = ["vendored"] }
lumen-core = { path = "crates/lumen-core" }
lumen-hyprland = { path = "crates/lumen-hyprland" }
lumen-mango = { path = "crates/lumen-mango" }
lumen-niri = { path = "crates/lumen-niri" }
lumen-media = { path = "crates/lumen-media" }
lumen-model-usage = { path = "crates/lumen-model-usage" }
lumen-network = { path = "crates/lumen-network" }
lumen-notification = { path = "crates/lumen-notification" }
lumen-power-profiles = { path = "crates/lumen-power-profiles" }
lumen-sysinfo = { path = "crates/lumen-sysinfo" }
lumen-systray = { path = "crates/lumen-systray" }
lumen-traits = { path = "crates/lumen-traits" }
lumen-wallpaper = { path = "crates/lumen-wallpaper" }
lumen-weather = { path = "crates/lumen-weather" }

lumen-config = { path = "crates/lumen-config" }
lumen-derive = { path = "crates/lumen-derive" }
lumen-i18n = { path = "crates/lumen-i18n" }
lumen-icons = { path = "crates/lumen-icons" }
lumen-idle-inhibit = { path = "crates/lumen-idle-inhibit" }
lumen-ipc = { path = "crates/lumen-ipc" }
lumen-shell = { path = "crates/lumen-shell" }
lumen-styling = { path = "crates/lumen-styling" }
lumen-widgets = { path = "crates/lumen-widgets" }

[workspace.lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
panic = "warn"
similar_names = "allow"
too_many_lines = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[profile.release]
lto = true
codegen-units = 1
