[package]
name = "lumen-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "D-Bus interface definitions for Lumen CLI and shell communication"
repository.workspace = true
license.workspace = true

[dependencies]
zbus.workspace = true

[lints]
workspace = true
