[package]
name = "lumen-mango"
description = "Reactive MangoWM compositor state and event streaming"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
lumen-core.workspace = true
lumen-traits.workspace = true

[lints]
workspace = true
