[package]
name = "lumen-model-usage"
description = "Subscription usage monitoring for AI coding agents (Claude Code, Codex CLI)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
lumen-core.workspace = true

[lints]
workspace = true
