[package]
name = "lumen-power-profiles"
description = "Power profile switching and monitoring"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
lumen-core.workspace = true
lumen-traits.workspace = true
zbus.workspace = true

[lints]
workspace = true
