[package]
name = "lumen-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "lumen-settings"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
notify.workspace = true
relm4.workspace = true
serde.workspace = true
serde_json.workspace = true
sourceview5.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
zbus.workspace = true
lumen-config = { path = "../lumen-config" }
lumen-icons = { path = "../lumen-icons" }
lumen-i18n = { path = "../lumen-i18n" }
lumen-styling = { path = "../lumen-styling" }
lumen-wallpaper.workspace = true
lumen-widgets = { path = "../lumen-widgets" }

[lints]
workspace = true
