[package]
name = "lumen-styling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SCSS compilation and theming for Lumen"
repository.workspace = true
license.workspace = true

[build-dependencies]
grass.workspace = true

[dependencies]
grass.workspace = true
notify.workspace = true
palette.workspace = true
relm4.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
lumen-config = { path = "../lumen-config" }

[dev-dependencies]
gtk4 = { workspace = true, features = ["v4_12"] }

[lints]
workspace = true
